fixed mbile scaling + disabled click to mute volume on mobile devices (or atleast, smaller screen sizes)

--- a/src/components/musicPlayer/volume/volume.module.css
+++ b/src/components/musicPlayer/volume/volume.module.css
@@ -67,3 +67,9 @@
   background: none;
   border: none;
 }
+
+@media screen and (max-width: 1000px) {
+  .volume > button {
+    pointer-events: none;
+  }
+}
